# DB2lab

./: .env  app.db  pyproject.toml
app/: app.db  main.py
app/api/api_v1/: api.py
app/api/endpoints/: auth.py  tables.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: base.py  user.py
app/schemas/: database.py  token.py
app/static/: index.html
lab2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
